--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,20 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+//	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+//	implementation 'org.springframework.data:spring-data-rest-hal-browser'
+
+//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
